QRasterPaintEngine::penChanged(): Assert on painter state.

Task-number: QTBUG-48823
Task-number: QTCREATORBUG-14888
Change-Id: I043a777da6b4e3dfdc58770fb136240a57707cb7
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>

cregit: bb8f01c6018ff4a0e575b5b128fee76b7fe4cbfb https://github.com/qt/qtbase/commit/bb8f01c6018ff4a0e575b5b128fee76b7fe4cbfb